<resources>
    <string name="app_name">recicl.ar</string>
    <string name="welcome_message">Welcome to the amazing world of recycling :)</string>
    <string name="register_message">Create new user</string>
    <string name="login_message">Log in</string>
    <string name="google_app_id" translatable="false">744508064852</string>

    <string name="create_user_success">Successfully created user account!</string>
    <string name="pass_forgot_message">Please enter your email. We\'ll send you the
        instructions to set a new password.</string>
    <string name="email_sent">Email sent</string>
    <string name="name_required">Name cannot be blank</string>

    <string name="required_field_error">This field is required</string>
    <string name="match_pass_error">The passwords entered does not match</string>
    <string name="invalid_email_error">The email entered is not valid</string>
    <string name="taken_email">The email entered is already taken</string>
    <string name="server_error">Recicl.ar can\'t connect to the server</string>
    <string name="unexpected_error">Ups! Unexpected error</string>

    <string name="action_profile">Profile</string>
    <string name="fab_sheet_item_recycle">Recycle</string>
    <string name="fab_sheet_item_scan">Scan code</string>
    <string name="title_activity_main" translatable="false">recicl.ar</string>
    <string name="action_logout">Logout</string>

    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_password_forgot">Forgot my password…</string>
    <string name="divisor_or">or</string>

    <string name="hint_name">Enter your name</string>
    <string name="label_name">Name</string>
    <string name="hint_bio">Enter your bio</string>
    <string name="label_bio">Bio</string>
    <string name="hint_location">Enter your location</string>
    <string name="label_location">Location</string>
    <string name="label_change_profile_pic">Change profile pic</string>
    <string name="label_qr">Please, scan the QR code in the recycling machine</string>
    <string name="label_continue">Continue</string>
    <string name="label_register">Register</string>
    <string name="label_enter_email">Enter Email</string>
    <string name="label_enter_password">Enter Password</string>
    <string name="label_enter_password_again">Enter Password (Again)</string>
    <string name="hello_world">Welcome to recicl.ar :)</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_qrscanner">QR code scan</string>
    <string name="title_activity_shop">Shop</string>
    <string name="title_activity_register_success">Register success!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_password_forgot">Forgotten Password</string>
    <string name="title_activity_materials">Materials</string>
    <string name="title_activity_editprofile">Edit profile</string>
    <string name="label_organic_waste">Organic Waste</string>
    <string name="label_cardboard">Cardboard</string>
    <string name="label_plastic">Plastic</string>
    <string name="label_glass">Glass</string>
    <string name="label_materials_1">Pick the type of material you want to recycle</string>
    <string name="label_materials_2">For more information about each material, tap the its info icon</string>
    <string name="title_activity_recycling_centers">Recycling Centers</string>
    <string name="label_amount">Amount</string>
    <string name="label_description">Description</string>
    <string name="label_buy">Buy</string>
    <string name="content_plastic">Los plásticos suponen una grave amenaza para el medio ambiente por dos motivos principales; su utilización masiva en todo tipo de productos y su lenta degradación. Se estima que tarda unos 180 años en descomponerse aunque este periodo varía en función del tipo de plástico. Los plásticos más comunes que se reciclan, son el PVC y el PET, siendo el primero mucho más contaminante para el medio ambiente.</string>
    <string name="content_cardboard">El reciclaje de cartón sigue un proceso muy similar al reciclaje de papel, por lo que se puede obtener separando correctamente este material, y depositándolo en los contenedores de color azul. No obstante, no hay que pensar únicamente en la solución rápida y sencilla, que es desprendernos de este material, sino intentar reaprovecharlo siempre que sea posible.</string>
    <string name="content_organic_waste">El Reciclaje orgánico o de materia orgánica, es aquel en el que la materia a reciclar, proviende de desechos naturales como son los alimentos, hojas, seres vivos o excrementos. Estos restos tienen un proceso natural de descomposición, por lo que rápidamente desaparecen para formar parte de nuevo del ciclo de la vida. Es lo que se conoce como basura orgánica.</string>
    <string name="content_glass">Si bien la consigna del reciclaje de vidrio no es tan simple como parece porque exige mucha logística (transporte de botellas, cuidados especiales para no romperlas, separación por tipos de botellas o de frascos de vidrio para ordenarlos, etc.), la parte que nos concierne es muy simple: sólo debemos tener la precaución de tirar siempre los vidrios en el contenedor verde que son exclusivos para los envases de vidrio. De este modo, estaremos evitando que los vidrios vayan a parar a los vertederos.</string>
    <string name="recycler_title">Closest %s recycling points</string>
    <string name="error">Error</string>
    <string name="invalid_email_password">Couldn\'t log in due to invalid email-password combination.</string>
    <plurals name="recypoints">
        <item quantity="one">%d recypoint</item>
        <item quantity="other">%d recypoints</item>
    </plurals>
    <string name="title_activity_map">Map</string>
    <string name="action_ok">ok</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="label_help_me">I don\'t know, help me!</string>
    <string name="content_dont_know">¿No sabes a qué categoría pertenece lo que deseas reciclar? Pues has llegado al lugar indicado. Responde nuestro cuestionario y rápidamente sabrás cómo reciclar cualquier cosa.</string>
    <string name="action_shop">Shop</string>
    <string name="title_activity_profile">Profile</string>
    <string name="label_edit_profile">Edit profile</string>
    <string name="title_fragment_history">History</string>
    <string name="title_fragment_friends">Friends</string>
    <string name="title_fragment_achievements">Achievements</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="recycle_success_title">Recycling success</string>
    <string name="recycle_failure_title">Recycling failure</string>
    <string name="recycle_failure_message">We\'re sorry, we haven\'t been able to verify the scanned code.</string>
    <string name="try_again_button">Try again</string>
    <string name="exit_button">Exit</string>
    <string name="error_camera_not_found">Camera not found</string>
    <string name="item_bought">Bought!</string>
    <string name="not_enough_rps">You dont have enough recypoints</string>
    <string name="buy_verification">Are you sure you want to buy </string>
    <string name="you_have">You have </string>

    <plurals name="recycle_success_message">
        <item quantity="one">Congratulations! You have just earned %d recypoint!</item>
        <item quantity="other">Congratulations! You have just earned %d recypoints!</item>
    </plurals>
    <string name="history_item_message_1">Two plastic bottles</string>
    <string name="history_item_message_10">Seven bottles of wine</string>
    <string name="history_item_message_11">Six pieces of glassware</string>
    <string name="history_item_message_12">Four bundles of old paper</string>
    <string name="history_item_message_2">Three aluminium cans</string>
    <string name="history_item_message_3">One glass bottle</string>
    <string name="history_item_message_4">Five cardboard boxes</string>
    <string name="history_item_message_5">Eight rubber duckies</string>
    <string name="history_item_message_6">3kg of organic waste</string>
    <string name="history_item_message_7">Ten plastic bottles</string>
    <string name="history_item_message_8">Five used notebooks</string>
    <string name="history_item_message_9">4kg of newspaper</string>

    <string name="q_bad_smell">Does your object smell bad?</string>
    <string name="q_flies">Does your object have flies around it?</string>
    <string name="q_transparent">Is your object transparent?</string>
    <string name="q_dense">Is your object very dense?</string>
    <string name="q_fragile">Is your object fragile?</string>
    <string name="q_malleable">Is your object malleable?</string>
    <string name="q_brown_color">Is your object brown in color?</string>
    <string name="q_has_cap">Does your object come with a cap?</string>
    <string name="q_serve_food">Would you serve food on or store food inside your object?</string>
    <string name="q_bad_taste">Does your object have a bad taste?</string>
    <string name="title_activity_helper_question">Helper: Question %1$d</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_dont_know">I don\'t know</string>
    <string name="title_activity_helper">Helper</string>
    <string name="label_helper_success">I believe your material is</string>
    <string name="button_helper_find_centers">Find %1$s recycling centers</string>
    <string name="label_helper_failure">You have beaten me! I don\'t know what your material is!</string>
    <string name="button_helper_try_again">Try again</string>
</resources>
