<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ar.recicl.reciclar.activity.PasswordForgot"
    tools:showIn="@layout/activity_password_forgot"
    android:orientation="vertical">

    <TextView
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pass_forgot_message"
        android:id="@+id/textView2"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/label_enter_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/label_continue"/>
</LinearLayout>