<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.Materials"
    tools:showIn="@layout/activity_materials"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:text="@string/label_materials_1"
            android:textStyle="bold"
            android:textColor="@color/text_primary_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            android:text="@string/label_materials_2"
            android:textColor="@color/text_primary_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/ButtonDontKnow"
                android:id="@+id/button_dont_know"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_dont_know"/>

            <ImageView
                android:id="@+id/button_info_dont_know"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_36dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/ButtonGlass"
                android:id="@+id/button_glass"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_glass"/>

            <ImageView
                android:id="@+id/button_info_glass"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_36dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/ButtonPlastic"
                android:id="@+id/button_plastic"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_plastic"/>

            <ImageView
                android:id="@+id/button_info_plastic"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_36dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/ButtonCardboard"
                android:id="@+id/button_cardboard"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_cardboard"/>

            <ImageView
                android:id="@+id/button_info_cardboard"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_36dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                style="@style/ButtonOrganicWaste"
                android:id="@+id/button_organic_waste"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_organic_waste"/>

            <ImageView
                android:id="@+id/button_info_organic_waste"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_36dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
